[package]
name = "quint_simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fxhash = "0.2.1"
indexmap = { version = "2.7", features = ["serde"] }
itertools = "0.14.0"

[dev-dependencies]
insta = {version = "1.22.0", features = ["yaml"]}
tempfile = "3.16.0"
