[package]
name = "quint_simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fxhash = "0.2.1"
indexmap = { version = "2.7", features = ["serde"] }
rand = "0.9.0"
squares-rnd = "3.1.0"
itertools = "0.14.0"
tempfile = "3.16.0"
serde_path_to_error = "0.1"

[dev-dependencies]
insta = {version = "1.22.0", features = ["yaml"]}
criterion = "0.5"

[[bench]]
name = "tuples"
harness = false

[[bench]]
name = "simulation"
harness = false
